--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,24 +1,28 @@
-unbind-key C-b
-set-option -g prefix C-w
-bind-key  '.' source-file ~/.tmux.conf
+unbind C-b
+set -g prefix C-w
+set -g repeat-time 1000
+set -g base-index 1
+set -g mouse on
+setw -g pane-base-index 1
+setw -g mode-keys vi
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind C-w send-prefix
 
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind H resize-pane -L 5
-bind L resize-pane -R 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 
 bind | split-window -h
 bind - split-window -v
 
-set-option -g base-index 1
-setw -g pane-base-index 1
-set-option -g mouse on
-
-# Vi copypaste mode
-set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
