--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 unbind C-b
-set -g prefix C-w
+set -g prefix C-a
 set -g repeat-time 1000
 set -g base-index 1
 set -g mouse on
@@ -7,7 +7,7 @@ setw -g pane-base-index 1
 setw -g mode-keys vi
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind C-w send-prefix
+bind C-a send-prefix
 
 bind h select-pane -L
 bind j select-pane -D
